fix lighthouse contrast

--- a/src/app/activity/components/activities-popup/activities-popup.component.scss
+++ b/src/app/activity/components/activities-popup/activities-popup.component.scss
@@ -1480,7 +1480,7 @@ button.activities-rate-score-badge-between:not(.is-disabled):active .activities-
   min-width: 22px;
   height: 22px;
   border-radius: 50%;
-  background: #d84d4d;
+  background: #991b1b;
   color: #fff;
   font-size: 11px;
   font-weight: 700;
